--- a/about-me/stylesheets/night-mode.css
+++ b/about-me/stylesheets/night-mode.css
@@ -226,5 +226,28 @@
     color: #a695cb;
   }
 
+    /* link stuff */
+    .APP-buttons {
+      background-color: transparent;
+      border: none;
+  
+      text-align: center;
+      padding-left: 35px;
+  
+      transition-duration: 0.3ms;
+    }
+    .APP-buttons:hover {
+      cursor: pointer;
+  
+      .APP-button-text {
+        color: rgb(166, 149, 203, 0.8)
+      }
+    }
+    .APP-button-text {
+      font-size: 16px;
+      font-weight: 700;
+      color: #a695cb;
+    }
+
 
 }
